// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MediaPlayer render the amp player 1`] = `
<html>
  <head>
    <script
      type="application/ld+json"
    >
      {"@context":"http://schema.org","@type":"VideoObject","name":"Five things ants can teach us about management","description":"They may be tiny, but us humans could learn a thing or two from ants.","duration":"PT3M11S","thumbnailUrl":"https://ichef.test.bbci.co.uk/images/ic/1024x576/p01k6mtv.jpg","uploadDate":"2018-10-22T14:35:32.000Z","embedURL":"https://embed-host.bbc.com/ws/av-embeds/cps/pidgin/123456789/p01k6msp/en-GB/amp"}
    </script>
    <script
      async="true"
      custom-element="amp-iframe"
      src="https://cdn.ampproject.org/v0/amp-iframe-0.1.js"
    />
  </head>
  <body>
    .c2 {
  margin: 0;
  padding-bottom: 1.5rem;
  width: 100%;
}

.c3 {
  padding-top: 56.25%;
  position: relative;
  overflow: hidden;
}

@media (max-width:14.9375rem) {
  .c0 {
    margin-left: 0%;
  }
}

@media (min-width:15rem) and (max-width:24.9375rem) {
  .c0 {
    margin-left: 0%;
  }
}

@media (min-width:25rem) and (max-width:37.4375rem) {
  .c0 {
    margin-left: 0%;
  }
}

@media (min-width:37.5rem) and (max-width:62.9375rem) {
  .c0 {
    margin-left: 0%;
  }
}

@media (min-width:63rem) and (max-width:80rem) {
  .c0 {
    margin-left: 12.5%;
  }
}

@media (min-width:80rem) {
  .c0 {
    margin-left: 33.333333333333336%;
  }
}

@supports (display:grid) {
  .c0 {
    display: block;
  }
}

@media (max-width:14.9375rem) {
  .c1 {
    margin-left: 0%;
  }
}

@media (min-width:15rem) and (max-width:24.9375rem) {
  .c1 {
    margin-left: 0%;
  }
}

@media (min-width:25rem) and (max-width:37.4375rem) {
  .c1 {
    margin-left: 0%;
  }
}

@media (min-width:37.5rem) and (max-width:62.9375rem) {
  .c1 {
    margin-left: 0%;
  }
}

@media (min-width:63rem) and (max-width:80rem) {
  .c1 {
    margin-left: 20%;
  }
}

@media (min-width:80rem) {
  .c1 {
    margin-left: 40%;
  }
}

@supports (display:grid) {
  .c1 {
    display: block;
  }
}

<div>
      <div
        class="c0"
        dir="ltr"
      >
        <div
          class="c1"
          dir="ltr"
        >
          <figure
            class="c2"
          >
            <div
              class="c3"
            >
              <amp-iframe
                allowfullscreen="allowfullscreen"
                frameborder="0"
                layout="fill"
                sandbox="allow-scripts allow-same-origin"
                scrolling="no"
                src="https://embed-host.bbc.com/ws/av-embeds/cps/pidgin/123456789/p01k6msp/en-GB/amp"
                title="Media player"
              >
                <amp-img
                  alt=""
                  attribution=""
                  height="16"
                  layout="fill"
                  placeholder="true"
                  src="https://ichef.test.bbci.co.uk/images/ic/512xn/p01k6mtv.jpg"
                  srcset="https://ichef.test.bbci.co.uk/images/ic/240xn/p01k6mtv.jpg 240w, https://ichef.test.bbci.co.uk/images/ic/320xn/p01k6mtv.jpg 320w, https://ichef.test.bbci.co.uk/images/ic/480xn/p01k6mtv.jpg 480w, https://ichef.test.bbci.co.uk/images/ic/624xn/p01k6mtv.jpg 624w, https://ichef.test.bbci.co.uk/images/ic/800xn/p01k6mtv.jpg 800w"
                  width="9"
                />
              </amp-iframe>
            </div>
          </figure>
        </div>
      </div>
    </div>
  </body>
</html>
`;

exports[`MediaPlayer render the canonical player without a placeholder 1`] = `
.c2 {
  margin: 0;
  padding-bottom: 1.5rem;
  width: 100%;
}

.c3 {
  padding-top: 56.25%;
  position: relative;
  overflow: hidden;
}

.c4 {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  border: 0;
  overflow: hidden;
}

@media (max-width:14.9375rem) {
  .c0 {
    margin-left: 0%;
  }
}

@media (min-width:15rem) and (max-width:24.9375rem) {
  .c0 {
    margin-left: 0%;
  }
}

@media (min-width:25rem) and (max-width:37.4375rem) {
  .c0 {
    margin-left: 0%;
  }
}

@media (min-width:37.5rem) and (max-width:62.9375rem) {
  .c0 {
    margin-left: 0%;
  }
}

@media (min-width:63rem) and (max-width:80rem) {
  .c0 {
    margin-left: 12.5%;
  }
}

@media (min-width:80rem) {
  .c0 {
    margin-left: 33.333333333333336%;
  }
}

@supports (display:grid) {
  .c0 {
    display: block;
  }
}

@media (max-width:14.9375rem) {
  .c1 {
    margin-left: 0%;
  }
}

@media (min-width:15rem) and (max-width:24.9375rem) {
  .c1 {
    margin-left: 0%;
  }
}

@media (min-width:25rem) and (max-width:37.4375rem) {
  .c1 {
    margin-left: 0%;
  }
}

@media (min-width:37.5rem) and (max-width:62.9375rem) {
  .c1 {
    margin-left: 0%;
  }
}

@media (min-width:63rem) and (max-width:80rem) {
  .c1 {
    margin-left: 20%;
  }
}

@media (min-width:80rem) {
  .c1 {
    margin-left: 40%;
  }
}

@supports (display:grid) {
  .c1 {
    display: block;
  }
}

<html>
  <head>
    <script
      type="application/ld+json"
    >
      {"@context":"http://schema.org","@type":"VideoObject","name":"Five things ants can teach us about management","description":"They may be tiny, but us humans could learn a thing or two from ants.","duration":"PT3M11S","thumbnailUrl":"https://ichef.test.bbci.co.uk/images/ic/1024x576/p01k6mtv.jpg","uploadDate":"2018-10-22T14:35:32.000Z","embedURL":"https://embed-host.bbc.com/ws/av-embeds/cps/pidgin/123456789/p01k6msp/en-GB"}
    </script>
  </head>
  <body>
    <div>
      <div
        class="c0"
        dir="ltr"
      >
        <div
          class="c1"
          dir="ltr"
        >
          <figure
            class="c2"
          >
            <div
              class="c3"
            >
              <iframe
                allow="autoplay; fullscreen"
                allowfullscreen=""
                class="c4"
                scrolling="no"
                src="https://embed-host.bbc.com/ws/av-embeds/cps/pidgin/123456789/p01k6msp/en-GB"
                title="Media player"
              />
            </div>
          </figure>
        </div>
      </div>
    </div>
  </body>
</html>
`;
